--- a/src/Pages/Student/profile/profile.css
+++ b/src/Pages/Student/profile/profile.css
@@ -1,8 +1,8 @@
 /* Container chung */
 .profile-container {
-  font-family: Arial, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   background-color: #f9fafb;
-  padding: 20px;
+  padding: 10px 0;
   margin-top: 80px;
 }
 
@@ -13,23 +13,19 @@
 
 /* Card thông tin học viên */
 .profile-card {
-  background-color: #ffffff;
-  border-radius: 8px;
+  background-color: white;
+  border-radius: 12px;
   padding: 20px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 8px rgba(45, 34, 34, 0.1);
   display: flex;
-  align-items: center;
-  justify-content: flex-start;
-}
-
-.profile-header {
-  /* flex container, được dùng chung trong profile-card */
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .profile-avatar {
+  width: 96px; /* kích thước ảnh */
+  height: 96px;
   border-radius: 50%;
-  width: 100px;
-  height: 100px;
   object-fit: cover;
 }
 
@@ -38,15 +34,16 @@
 }
 
 .profile-details h2 {
+  margin: 0;
   font-size: 1.5rem;
-  color: #333;
-  margin: 0 0 8px 0;
+  font-weight: 700;
+  color: #111827;
 }
 
 .profile-details p {
-  font-size: 0.875rem;
-  color: #666;
-  margin: 2px 0;
+  margin-top: 4px;
+  color: #6b7280;
+  font-size: 0.9rem;
 }
 
 /* Courses Section */
